--- a/app/templates/usuario/imagenes.html
+++ b/app/templates/usuario/imagenes.html
@@ -1,7 +1,11 @@
 {% extends 'layout.html' %}
 
 {% block div %}
-<h1 class="text-1xl font-bold text-gray-800">IMAGENES</h1>
+<div class="flex items-center ml-auto text-center">
+    <button class="bg-blue-500 text-white font-bold px-4 py-2 rounded-lg hover:bg-blue-700">
+        IMAGENES
+    </button>
+</div>
 {% endblock %}
 
 {% block body %}
