--- a/app/templates/usuario/registroVehiculos.html
+++ b/app/templates/usuario/registroVehiculos.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 
 {% block div %}
-<span>Registro de Vehículos</span>
+<div class="flex items-center ml-auto text-center">
+    <button class="bg-blue-500 text-white font-bold px-4 py-2 rounded-lg hover:bg-blue-700">
+        Registro de Vehículos
+    </button>
+</div>
 {% endblock %}
 
 {% block body %}
