--- a/app/templates/usuario/alertas.html
+++ b/app/templates/usuario/alertas.html
@@ -1,6 +1,10 @@
 {% extends 'layout.html' %}
 {% block div %}
-<h1 class="text-1xl font-bold text-gray-800">ALERTAS</h1>
+<div class="flex items-center ml-auto text-center">
+    <button class="bg-blue-500 text-white font-bold px-4 py-2 rounded-lg hover:bg-blue-700">
+        ALERTAS
+    </button>
+</div>
 {% endblock %}
 
 {% block body %}
